--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -21,7 +21,7 @@ ul {
     outline: 2px solid #460def;
 }
 
-/* .profile-dropdown {
+.profile-dropdown {
     background-color: white;
      box-shadow: 2px 2px 15px 5px rgba(0,0,0,0.15);
     border-radius: 10px;
@@ -39,4 +39,8 @@ ul {
     font-family:Arial, Helvetica, sans-serif;
     font-size: 17px;
     z-index: 5500;
-} */
+}
+
+.hidden {
+    display: none;
+}
