--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,12 @@
 /* TODO Add site wide styles */
+.globalinput {
+    
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 0px 0px 5px 2px #ccc;
+    font-size: 16px;
+}
