--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 /* TODO Add site wide styles */
-.globalinput {
+/* .globalinput {
     
     width: 100%;
     padding: 10px;
@@ -9,4 +9,12 @@
     background-color: #fff;
     box-shadow: 0px 0px 5px 2px #ccc;
     font-size: 16px;
-}
+} */
+
+/*
+add footer
+fav icon
+logo
+
+
+*/
