--- a/frontend/src/components/AllSpots/Spots.css
+++ b/frontend/src/components/AllSpots/Spots.css
@@ -35,3 +35,10 @@
     /* outline: 2px solid #aee33b; */
 
 }
+
+.review-rating::before {
+    content:"★";
+    font-size: 20px;
+    color: #F5A623;
+    margin-right:5px;
+}
