--- a/frontend/src/components/Spot-Single/Spot.css
+++ b/frontend/src/components/Spot-Single/Spot.css
@@ -8,3 +8,10 @@
     height: 500px;
     width: 700px;
 }
+
+.single-review-rating::after {
+    content:"★";
+    font-size: 20px;
+    color: #F5A623;
+    margin-right:5px;
+}
