--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -15,10 +15,17 @@
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #modal-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 500px;
   position: absolute;
   background-color:white;
+  align-self: center;
+  outline: 2px rgb(225, 25, 25);
+
 }
