--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -16,9 +16,11 @@ ul {
     width: 5%;
 }
 
-.Homebutton {
-    /* outline: 2px solid #460def; */
+.logoimg {
+    height: 95%;
+    width: 90%;
 }
+
 
 .profile-dropdown {
     background-color: rgba(250, 250, 250, 0.751);
