--- a/frontend/src/components/Spot-Create/createSpot.css
+++ b/frontend/src/components/Spot-Create/createSpot.css
@@ -1,23 +1,53 @@
-.Form-Title{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    font-size: 19px;
-}
-
-.Create-Spot{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-bottom: solid 0.75px rgba(0,0,0,0.1);
-    padding: 11px;
-background-color: aquamarine;
-}
-
-
 .CreateSpotForm {
-    display:flex;
+    display: flex;
     flex-direction: column;
-
-}
+    align-items: center;
+    margin-top: 20px;
+    
+  }
+  
+  .CreateSpotForm ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  
+  .CreateSpotForm label {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 10px;
+  }
+  
+  .CreateSpotForm label input {
+    margin-top: 5px;
+    padding: 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+  }
+  
+  .CreateSpotForm label input:focus {
+    outline: none;
+    border-color: #0077FF;
+  }
+  
+  .CreateSpotForm button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #0077FF;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .CreateSpotForm button:hover {
+    background-color: #0059B3;
+  }
+  
+  .CreateSpotForm button:active {
+    background-color: #003D80;
+  }
