--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,7 +3,7 @@ ul {
 }
 
 .MainNavDiv {
-    outline: 2px solid #0eea69;
+    /* outline: 2px solid #0eea69; */
     outline-offset: 0px;
     display: flex;
     justify-content: space-between;
